--- a/TicTacToe/Views/Home/Index.cshtml
+++ b/TicTacToe/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
             }
             else
             {
-                <button class="btn btn-outline-dark" value="@cell.Id" disabled>&nbsp;</button>
+                <button class="btn btn-outline-dark" disabled>&nbsp;</button>
             }
             @if (cell.IsEndCell)
             {
