--- a/TicTacToe/Views/Home/Index.cshtml
+++ b/TicTacToe/Views/Home/Index.cshtml
@@ -4,7 +4,14 @@
 
     ViewData["Title"] = "Tic Tac Toe";
 }
-
+@if (Model.IsGameOver)
+{
+    <a asp-action="Index"><b>New Game</b></a>
+}
+else
+{
+<h2>@Model.Selected.Mark's turn</h2>
+}
 <form asp-action="Index" method="post">
     <input type="hidden" asp-for="Selected.Mark"/>
     <div class="board-row">
@@ -12,11 +19,11 @@
         {
             @if (cell.IsBlank)
             {
-                <button type="submit" name="Selected.Id" value="@cell.Id"  class="btn btn-outline-dark">&nbsp;</button>
+                <button type="submit" name="Selected.Id" value="@cell.Id"  class="btn btn-outline-dark p-5">&nbsp;</button>
             }
             else
             {
-                <button class="btn btn-outline-dark" disabled>@cell.Mark</button>
+                <button class="btn btn-outline-dark p-5" disabled>@cell.Mark</button>
             }
             @if (cell.IsEndCell)
             {
