--- a/TicTacToe/Views/Shared/_Layout.cshtml
+++ b/TicTacToe/Views/Shared/_Layout.cshtml
@@ -12,6 +12,10 @@
         <header class="bg-info text-white p-5 mb-1" ><h1>Tic Tac Toe</h1></header>
         <main role="main">
             <!--Message for winner or loser or tie-->
+            @if (TempData.Keys.Contains("message"))
+            {
+                <h4 class="bg-success text-white p-3">@TempData["message"]</h4>
+            }
             @RenderBody()
         </main>
       </div>
